backend/ANTLR/processLevelMonitoring/systemDescriptionParser.py
# Generated from systemDescription.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class systemDescriptionParser ( Parser ):

    grammarFileName = "systemDescription.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Process'", "'{'", "'}'", "'binary_readings:'", 
                     "','", "';'", "'binary_controls:'", "'discrete_readings:'", 
                     "'discrete_controls:'", "'analog_readings:'", "'analog_controls:'", 
                     "'PLC'", "'slave_address:'", "'ip:'", "'protocol:'", 
                     "'inputs:'", "'outputs:'", "'adConverters'", "':'", 
                     "'plcToProcess'", "'dnp3Mapping'", "<INVALID>", "'|'", 
                     "'&'", "<INVALID>", "'!='", "'>'", "'<'", "'>='", "'<='", 
                     "'+'", "'-'", "'*'", "'/'", "<INVALID>", "'on'", "'off'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "OPERATOR", "OR", "AND", 
                      "EQ", "NEQ", "G", "L", "GEQ", "LEQ", "ADD", "SUB", 
                      "MUL", "DIV", "BOOL", "TRUE", "FALSE", "INT", "ID", 
                      "DOUBLE", "WS", "COMMENT", "IP", "PV" ]

    RULE_masterRule = 0
    RULE_construct = 1
    RULE_process = 2
    RULE_binary_readings = 3
    RULE_binary_controls = 4
    RULE_discrete_readings = 5
    RULE_discrete_controls = 6
    RULE_analog_readings = 7
    RULE_analog_controls = 8
    RULE_plc = 9
    RULE_inputs = 10
    RULE_outputs = 11
    RULE_adConverters = 12
    RULE_r = 13
    RULE_plcToProcess = 14
    RULE_dnp3Mapping = 15
    RULE_raw = 16

    ruleNames =  [ "masterRule", "construct", "process", "binary_readings", 
                   "binary_controls", "discrete_readings", "discrete_controls", 
                   "analog_readings", "analog_controls", "plc", "inputs", 
                   "outputs", "adConverters", "r", "plcToProcess", "dnp3Mapping", 
                   "raw" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    OPERATOR=22
    OR=23
    AND=24
    EQ=25
    NEQ=26
    G=27
    L=28
    GEQ=29
    LEQ=30
    ADD=31
    SUB=32
    MUL=33
    DIV=34
    BOOL=35
    TRUE=36
    FALSE=37
    INT=38
    ID=39
    DOUBLE=40
    WS=41
    COMMENT=42
    IP=43
    PV=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MasterRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def construct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(systemDescriptionParser.ConstructContext)
            else:
                return self.getTypedRuleContext(systemDescriptionParser.ConstructContext,i)


        def getRuleIndex(self):
            return systemDescriptionParser.RULE_masterRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMasterRule" ):
                listener.enterMasterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMasterRule" ):
                listener.exitMasterRule(self)




    def masterRule(self):

        localctx = systemDescriptionParser.MasterRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_masterRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.construct()
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 35
                self.construct()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def process(self):
            return self.getTypedRuleContext(systemDescriptionParser.ProcessContext,0)


        def plc(self):
            return self.getTypedRuleContext(systemDescriptionParser.PlcContext,0)


        def plcToProcess(self):
            return self.getTypedRuleContext(systemDescriptionParser.PlcToProcessContext,0)


        def adConverters(self):
            return self.getTypedRuleContext(systemDescriptionParser.AdConvertersContext,0)


        def dnp3Mapping(self):
            return self.getTypedRuleContext(systemDescriptionParser.Dnp3MappingContext,0)


        def getRuleIndex(self):
            return systemDescriptionParser.RULE_construct

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstruct" ):
                listener.enterConstruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstruct" ):
                listener.exitConstruct(self)




    def construct(self):

        localctx = systemDescriptionParser.ConstructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_construct)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.process()
            self.state = 42
            self.plc()
            self.state = 43
            self.plcToProcess()
            self.state = 44
            self.adConverters()
            self.state = 45
            self.dnp3Mapping()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(systemDescriptionParser.ID, 0)

        def binary_readings(self):
            return self.getTypedRuleContext(systemDescriptionParser.Binary_readingsContext,0)


        def binary_controls(self):
            return self.getTypedRuleContext(systemDescriptionParser.Binary_controlsContext,0)


        def discrete_readings(self):
            return self.getTypedRuleContext(systemDescriptionParser.Discrete_readingsContext,0)


        def discrete_controls(self):
            return self.getTypedRuleContext(systemDescriptionParser.Discrete_controlsContext,0)


        def analog_readings(self):
            return self.getTypedRuleContext(systemDescriptionParser.Analog_readingsContext,0)


        def analog_controls(self):
            return self.getTypedRuleContext(systemDescriptionParser.Analog_controlsContext,0)


        def getRuleIndex(self):
            return systemDescriptionParser.RULE_process

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcess" ):
                listener.enterProcess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcess" ):
                listener.exitProcess(self)




    def process(self):

        localctx = systemDescriptionParser.ProcessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_process)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(systemDescriptionParser.T__0)
            self.state = 48
            self.match(systemDescriptionParser.ID)
            self.state = 49
            self.match(systemDescriptionParser.T__1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 50
                self.binary_readings()


            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 53
                self.binary_controls()


            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 56
                self.discrete_readings()


            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 59
                self.discrete_controls()


            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 62
                self.analog_readings()


            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 65
                self.analog_controls()


            self.state = 68
            self.match(systemDescriptionParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Binary_readingsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(systemDescriptionParser.ID)
            else:
                return self.getToken(systemDescriptionParser.ID, i)

        def getRuleIndex(self):
            return systemDescriptionParser.RULE_binary_readings

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary_readings" ):
                listener.enterBinary_readings(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary_readings" ):
                listener.exitBinary_readings(self)




    def binary_readings(self):

        localctx = systemDescriptionParser.Binary_readingsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_binary_readings)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(systemDescriptionParser.T__3)
            self.state = 71
            self.match(systemDescriptionParser.ID)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 72
                self.match(systemDescriptionParser.T__4)
                self.state = 73
                self.match(systemDescriptionParser.ID)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(systemDescriptionParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Binary_controlsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(systemDescriptionParser.ID)
            else:
                return self.getToken(systemDescriptionParser.ID, i)

        def getRuleIndex(self):
            return systemDescriptionParser.RULE_binary_controls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary_controls" ):
                listener.enterBinary_controls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary_controls" ):
                listener.exitBinary_controls(self)




    def binary_controls(self):

        localctx = systemDescriptionParser.Binary_controlsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_binary_controls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(systemDescriptionParser.T__6)
            self.state = 82
            self.match(systemDescriptionParser.ID)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 83
                self.match(systemDescriptionParser.T__4)
                self.state = 84
                self.match(systemDescriptionParser.ID)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(systemDescriptionParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Discrete_readingsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(systemDescriptionParser.ID)
            else:
                return self.getToken(systemDescriptionParser.ID, i)

        def getRuleIndex(self):
            return systemDescriptionParser.RULE_discrete_readings

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiscrete_readings" ):
                listener.enterDiscrete_readings(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiscrete_readings" ):
                listener.exitDiscrete_readings(self)




    def discrete_readings(self):

        localctx = systemDescriptionParser.Discrete_readingsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_discrete_readings)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(systemDescriptionParser.T__7)
            self.state = 93
            self.match(systemDescriptionParser.ID)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 94
                self.match(systemDescriptionParser.T__4)
                self.state = 95
                self.match(systemDescriptionParser.ID)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(systemDescriptionParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Discrete_controlsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(systemDescriptionParser.ID)
            else:
                return self.getToken(systemDescriptionParser.ID, i)

        def getRuleIndex(self):
            return systemDescriptionParser.RULE_discrete_controls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiscrete_controls" ):
                listener.enterDiscrete_controls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiscrete_controls" ):
                listener.exitDiscrete_controls(self)




    def discrete_controls(self):

        localctx = systemDescriptionParser.Discrete_controlsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_discrete_controls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(systemDescriptionParser.T__8)
            self.state = 104
            self.match(systemDescriptionParser.ID)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 105
                self.match(systemDescriptionParser.T__4)
                self.state = 106
                self.match(systemDescriptionParser.ID)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(systemDescriptionParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Analog_readingsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(systemDescriptionParser.ID)
            else:
                return self.getToken(systemDescriptionParser.ID, i)

        def getRuleIndex(self):
            return systemDescriptionParser.RULE_analog_readings

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnalog_readings" ):
                listener.enterAnalog_readings(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnalog_readings" ):
                listener.exitAnalog_readings(self)




    def analog_readings(self):

        localctx = systemDescriptionParser.Analog_readingsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_analog_readings)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(systemDescriptionParser.T__9)
            self.state = 115
            self.match(systemDescriptionParser.ID)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 116
                self.match(systemDescriptionParser.T__4)
                self.state = 117
                self.match(systemDescriptionParser.ID)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(systemDescriptionParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Analog_controlsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(systemDescriptionParser.ID)
            else:
                return self.getToken(systemDescriptionParser.ID, i)

        def getRuleIndex(self):
            return systemDescriptionParser.RULE_analog_controls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnalog_controls" ):
                listener.enterAnalog_controls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnalog_controls" ):
                listener.exitAnalog_controls(self)




    def analog_controls(self):

        localctx = systemDescriptionParser.Analog_controlsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_analog_controls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(systemDescriptionParser.T__10)
            self.state = 126
            self.match(systemDescriptionParser.ID)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 127
                self.match(systemDescriptionParser.T__4)
                self.state = 128
                self.match(systemDescriptionParser.ID)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(systemDescriptionParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(systemDescriptionParser.ID)
            else:
                return self.getToken(systemDescriptionParser.ID, i)

        def INT(self):
            return self.getToken(systemDescriptionParser.INT, 0)

        def IP(self):
            return self.getToken(systemDescriptionParser.IP, 0)

        def inputs(self):
            return self.getTypedRuleContext(systemDescriptionParser.InputsContext,0)


        def outputs(self):
            return self.getTypedRuleContext(systemDescriptionParser.OutputsContext,0)


        def getRuleIndex(self):
            return systemDescriptionParser.RULE_plc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlc" ):
                listener.enterPlc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlc" ):
                listener.exitPlc(self)




    def plc(self):

        localctx = systemDescriptionParser.PlcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_plc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(systemDescriptionParser.T__11)
            self.state = 137
            self.match(systemDescriptionParser.ID)
            self.state = 138
            self.match(systemDescriptionParser.T__1)
            self.state = 139
            self.match(systemDescriptionParser.T__12)
            self.state = 140
            self.match(systemDescriptionParser.INT)
            self.state = 141
            self.match(systemDescriptionParser.T__5)
            self.state = 142
            self.match(systemDescriptionParser.T__13)
            self.state = 143
            self.match(systemDescriptionParser.IP)
            self.state = 144
            self.match(systemDescriptionParser.T__5)
            self.state = 145
            self.match(systemDescriptionParser.T__14)
            self.state = 146
            self.match(systemDescriptionParser.ID)
            self.state = 147
            self.match(systemDescriptionParser.T__5)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 148
                self.inputs()


            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 151
                self.outputs()


            self.state = 154
            self.match(systemDescriptionParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(systemDescriptionParser.ID)
            else:
                return self.getToken(systemDescriptionParser.ID, i)

        def getRuleIndex(self):
            return systemDescriptionParser.RULE_inputs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputs" ):
                listener.enterInputs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputs" ):
                listener.exitInputs(self)




    def inputs(self):

        localctx = systemDescriptionParser.InputsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_inputs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(systemDescriptionParser.T__15)
            self.state = 157
            self.match(systemDescriptionParser.ID)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 158
                self.match(systemDescriptionParser.T__4)
                self.state = 159
                self.match(systemDescriptionParser.ID)
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 165
            self.match(systemDescriptionParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(systemDescriptionParser.ID)
            else:
                return self.getToken(systemDescriptionParser.ID, i)

        def getRuleIndex(self):
            return systemDescriptionParser.RULE_outputs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputs" ):
                listener.enterOutputs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputs" ):
                listener.exitOutputs(self)




    def outputs(self):

        localctx = systemDescriptionParser.OutputsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_outputs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(systemDescriptionParser.T__16)
            self.state = 168
            self.match(systemDescriptionParser.ID)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 169
                self.match(systemDescriptionParser.T__4)
                self.state = 170
                self.match(systemDescriptionParser.ID)
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 176
            self.match(systemDescriptionParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdConvertersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(systemDescriptionParser.RContext)
            else:
                return self.getTypedRuleContext(systemDescriptionParser.RContext,i)


        def getRuleIndex(self):
            return systemDescriptionParser.RULE_adConverters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdConverters" ):
                listener.enterAdConverters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdConverters" ):
                listener.exitAdConverters(self)




    def adConverters(self):

        localctx = systemDescriptionParser.AdConvertersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_adConverters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(systemDescriptionParser.T__17)
            self.state = 179
            self.match(systemDescriptionParser.T__1)
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 180
                self.r()
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 186
            self.match(systemDescriptionParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(systemDescriptionParser.ID, 0)

        def INT(self):
            return self.getToken(systemDescriptionParser.INT, 0)

        def DOUBLE(self, i:int=None):
            if i is None:
                return self.getTokens(systemDescriptionParser.DOUBLE)
            else:
                return self.getToken(systemDescriptionParser.DOUBLE, i)

        def getRuleIndex(self):
            return systemDescriptionParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR" ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR" ):
                listener.exitR(self)




    def r(self):

        localctx = systemDescriptionParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_r)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(systemDescriptionParser.ID)
            self.state = 189
            self.match(systemDescriptionParser.T__18)
            self.state = 190
            self.match(systemDescriptionParser.INT)
            self.state = 191
            self.match(systemDescriptionParser.T__18)
            self.state = 192
            self.match(systemDescriptionParser.DOUBLE)
            self.state = 193
            self.match(systemDescriptionParser.T__18)
            self.state = 194
            self.match(systemDescriptionParser.DOUBLE)
            self.state = 195
            self.match(systemDescriptionParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlcToProcessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(systemDescriptionParser.ID)
            else:
                return self.getToken(systemDescriptionParser.ID, i)

        def getRuleIndex(self):
            return systemDescriptionParser.RULE_plcToProcess

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlcToProcess" ):
                listener.enterPlcToProcess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlcToProcess" ):
                listener.exitPlcToProcess(self)




    def plcToProcess(self):

        localctx = systemDescriptionParser.PlcToProcessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_plcToProcess)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.match(systemDescriptionParser.T__19)
            self.state = 198
            self.match(systemDescriptionParser.ID)
            self.state = 199
            self.match(systemDescriptionParser.T__1)
            self.state = 200
            self.match(systemDescriptionParser.ID)
            self.state = 205
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 201
                self.match(systemDescriptionParser.T__4)
                self.state = 202
                self.match(systemDescriptionParser.ID)
                self.state = 207
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 208
            self.match(systemDescriptionParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dnp3MappingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(systemDescriptionParser.ID, 0)

        def raw(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(systemDescriptionParser.RawContext)
            else:
                return self.getTypedRuleContext(systemDescriptionParser.RawContext,i)


        def getRuleIndex(self):
            return systemDescriptionParser.RULE_dnp3Mapping

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDnp3Mapping" ):
                listener.enterDnp3Mapping(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDnp3Mapping" ):
                listener.exitDnp3Mapping(self)




    def dnp3Mapping(self):
